force-app/main/default/objects/Student__c/fields/CumulativeGPA__c.field-meta.xml
<CustomField>
    <fullName>CumulativeGPA__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Cumulative GPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>