force-app/main/default/objects/Student__c/fields/MajorGPA__c.field-meta.xml
<CustomField>
    <fullName>MajorGPA__c</fullName>
    <label>Major GPA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>