force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Advisor__c</columns>
    <columns>Age__c</columns>
    <columns>CumulativeGPA__c</columns>
    <columns>Email__c</columns>
    <columns>MajorGPA__c</columns>
    <columns>PhoneNumber__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>