force-app/main/default/objects/Student__c/listViews/Student_with_Major.listView-meta.xml
<ListView>
    <fullName>Student_with_Major</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Student with Major</label>
</ListView>